[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tabicl-calibration-gate"
dynamic = ["version"]
description = "Calibration quality-gate for tabular classifiers — TabICL-first, model-agnostic, offline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "klodynlov" }]
keywords = ["calibration", "ece", "tabular", "tabicl", "quality-gate", "sklearn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy", "scikit-learn>=1.3", "pandas"]

[project.optional-dependencies]
tabicl = ["tabicl"]
plot = ["matplotlib"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/klodynlov/tabicl-calibration-gate"
Write-up = "https://karaibart.fr/tabicl.html"

[project.scripts]
tabgate = "calibration_gate:main"

[tool.setuptools]
py-modules = ["calibration_gate"]

[tool.setuptools.dynamic]
version = { attr = "calibration_gate.__version__" }
